# cloudbase-init

./: .coveragerc  .gitattributes  .gitignore  .gitreview  .readthedocs.yaml  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.MD  README.md  README.rst  openstack-common.conf  requirements-windows.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  upper-constraints.txt
.github/workflows/: cloudbase_init_tests.yml  functional_tests.yml  unit_tests.yml
cloudbaseinit/: constant.py  exception.py  init.py  shell.py  utils.py  version.py
cloudbaseinit/conf/: __init__.py  azure.py  base.py  cloudconfig.py  cloudstack.py  default.py  ec2.py  factory.py  foreman.py  gce.py  hibee.py  maas.py  nocloud.py  openstack.py  opts.py  ovf.py  packet.py  vmwareguestinfo.py
cloudbaseinit/metadata/: factory.py
cloudbaseinit/metadata/services/: azureservice.py  base.py  baseconfigdrive.py  baseopenstackservice.py  cloudstack.py  configdrive.py  ec2service.py  foreman.py  gceservice.py  hibee.py  httpservice.py  maasservice.py  nocloudservice.py  opennebulaservice.py  ovfservice.py  packet.py  vmwareguestinfoservice.py
cloudbaseinit/models/: network.py
cloudbaseinit/openstack/common/: cfg.py  eventlet_backdoor.py  excutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  network_utils.py  policy.py  service.py  sslutils.py  strutils.py  systemd.py  threadgroup.py  timeutils.py  versionutils.py
cloudbaseinit/osutils/: base.py  factory.py  posix.py  windows.py
cloudbaseinit/plugins/: base.py  constants.py  factory.py
cloudbaseinit/plugins/common/: base.py  createuser.py  ephemeraldisk.py  execcmd.py  factory.py  fileexecutils.py  localnetworkconfig.py  localscripts.py  mtu.py  networkconfig.py  ntpclient.py  sethostname.py  setuserpassword.py  sshpublickeys.py  trim.py  userdata.py  userdatautils.py
cloudbaseinit/plugins/windows/: azureguestagent.py  bootconfig.py  certificates.py  cloudstackpassword.py  createuser.py  createvolumes.py  cryptoapi.py  displayidletimeout.py  extendvolumes.py  fileexecutils.py  licensing.py  localscripts.py  mtu.py  networkconfig.py  ntpclient.py  pagefiles.py  rdp.py  sanpolicy.py  setdate.py  sethostname.py  setuserpassword.py  sshpublickeys.py  updates.py  userdata.py  userdata_plugins.py  userdatautils.py  (+5 more)
cloudbaseinit/test/: test.mime
cloudbaseinit/tests/: __init__.py  fake.py  test_exception.py  test_init.py  test_version.py  testutils.py
cloudbaseinit/utils/: classloader.py  crypt.py  debiface.py  dhcp.py  encoding.py  hostname.py  log.py  network.py  network_team.py  retry_decorator.py  s.py  serialization.py  x509constants.py
doc/: Makefile  make.bat  requirements.txt
doc/source/: conf.py  config.rst  index.rst  intro.rst  plugins.rst  services.rst  tutorial.rst  userdata.rst
etc/cloudbase-init/: README.md  cloudbase-init-config-generator.conf
releasenotes/source/: conf.py  index.rst
tools/: pip-requires
(+222 files in other folders)
