[metadata]
name = cloudbase-init
version = 1.1.7
summary = Portable cloud initialization service
description-file =
  README.rst
author = Cloudbase Solutions Srl
author-email = apilotti@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13

[files]
packages =
  cloudbaseinit

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
  cloudbase-init = cloudbaseinit.shell:main

oslo.config.opts =
    cloudbaseinit.conf = cloudbaseinit.conf.opts:get_options
